--- a/mv-productos-administracion.html
+++ b/mv-productos-administracion.html
@@ -245,7 +245,7 @@
                         <div class="wrapper">
                             <div class="file-upload">
                                 <input type="file" name="images" id="images-01"
-                                       ac-upload-files="$ctrl.updateFotoProyecto(selectedFileList,1,'')"/>
+                                       mv-upload-files="$ctrl.updateFotoProyecto(selectedFileList,1,'')"/>
                                 <i class="fa fa-arrow-up"></i>
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                         <div class="wrapper">
                             <div class="file-upload">
                                 <input type="file" name="images" id="images-02"
-                                       ac-upload-files="$ctrl.updateFotoProyecto(selectedFileList,2,'')"/>
+                                       mv-upload-files="$ctrl.updateFotoProyecto(selectedFileList,2,'')"/>
                                 <i class="fa fa-arrow-up"></i>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                         <div class="wrapper">
                             <div class="file-upload">
                                 <input type="file" name="images" id="images-03"
-                                       ac-upload-files="$ctrl.updateFotoProyecto(selectedFileList,3,'')"/>
+                                       mv-upload-files="$ctrl.updateFotoProyecto(selectedFileList,3,'')"/>
                                 <i class="fa fa-arrow-up"></i>
                             </div>
                         </div>
