--- a/mv-productos-administracion.html
+++ b/mv-productos-administracion.html
@@ -85,6 +85,7 @@
                     <label>Tipo Producto</label>
                     <select name="producto_tipo_id" id="producto_tipo_id" ng-model="$ctrl.productoTipo"
                             ng-options="productoTipo.nombre  for productoTipo in $ctrl.productosTipo"
+                            ng-click="$ctrl.showProductoCompuesto=($ctrl.productoTipo.producto_tipo_id == 2) ? true : false;"
                             class="browser-default">
                     </select>
                 </div>
@@ -140,11 +141,11 @@
 
             </div>
 
-            <div class="mv-col">
+            <!--<div class="mv-col">
                 <label class="label--checkbox" ng-click="$ctrl.showProductoCompuesto=!$ctrl.showProductoCompuesto">
                     <input type="checkbox" class="checkbox" id="check-showProductoCompuesto" ng-checked="$ctrl.showProductoCompuesto">Mostrar Producto Compuesto
                 </label>
-            </div>
+            </div>-->
             <div class="mv-col hide-panel" ng-class="{'show-panel':$ctrl.showProductoCompuesto}">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Producto Compuesto</div>
