--- a/mv-categorias-administracion.html
+++ b/mv-categorias-administracion.html
@@ -58,8 +58,8 @@
             <h2>Nueva Categoria</h2>
 
             <div class="mv-col">
-                <div class="input" data-tip="Categoria">
-                    <input id="nombre" type="text" ng-model="$ctrl.categoria.nombre"
+                <div style="width: 95%" class="input" data-tip="Categoria">
+                    <input style="width: 100%" id="nombre" type="text" ng-model="$ctrl.categoria.nombre"
                            placeholder="Categoria" autocomplete="off" maxlength="70" />
                 </div>
             </div>
