--- a/mv-productos-administracion.html
+++ b/mv-productos-administracion.html
@@ -69,7 +69,7 @@
                     <input id="nombre" type="text" ng-model="$ctrl.producto.nombre" placeholder="Nombre"
                            autocomplete="off" maxlength="100"/>
                 </div>
-                <div class="input" data-tip="Punto Reposición" style="margin-left: 10px;">
+                <div class="input" data-tip="Punto Reposición">
                     <input id="pto_repo" type="number" ng-model="$ctrl.producto.pto_repo"
                            placeholder="Punto Reposición" max="99999" />
                 </div>
