--- a/mv-productotipo-administracion.html
+++ b/mv-productotipo-administracion.html
@@ -60,8 +60,8 @@
             <h2>Nuevo Tipo de Producto</h2>
 
             <div class="mv-col">
-                <div class="input" data-tip="Nombre">
-                    <input id="nombre" type="text" ng-model="$ctrl.productoTipo.nombre"
+                <div style="width: 95%" class="input" data-tip="Nombre">
+                    <input style="width: 100%" id="nombre" type="text" ng-model="$ctrl.productoTipo.nombre"
                            placeholder="Nombre" autocomplete="off" maxlength="50" />
                 </div>
             </div>
