--- a/mv-categorias-administracion.html
+++ b/mv-categorias-administracion.html
@@ -22,7 +22,7 @@
             <tbody>
             <tr ng-repeat="row in $ctrl.categorias | filter:$ctrl.filtro | limitTo:$ctrl.limit:$ctrl.start"
                 ng-click="row.categoria_id=''+row.categoria_id;$ctrl.categoria=row;$ctrl.detailsOpen=true;
-                $ctrl.status=($ctrl.categoria.status == 1 ? true : false);$ctrl.update=true;">
+                $ctrl.status=($ctrl.categoria.status == 1 ? true : false);$ctrl.update=true;$ctrl.productos=[];">
                 <td class="">{{row.nombre}}</td>
                 <td class="">{{row.status == 0 ? 'N' : 'S'}}</td>
             </tr>
@@ -72,6 +72,20 @@
                 <label class="label--checkbox" ng-click="$ctrl.status=!$ctrl.status" ng-if="$ctrl.update">
                     <input type="checkbox" class="checkbox" id="check-status" ng-checked="$ctrl.status">Activo
                 </label>
+
+                <button type="button" class="boton-calendario" ng-if="$ctrl.productos.length > 0"
+                        ng-click="$ctrl.showProducto=!$ctrl.showProducto;" title="Info">
+                    <i class="fa fa-info-circle" aria-hidden="true"></i>
+                </button>
+            </div>
+
+            <h2 ng-if="$ctrl.showProducto==true">Productos asociados</h2>
+            <div class="mv-col" ng-if="$ctrl.showProducto==true">
+                <div style="width: 95%" class="input">
+                    <div ng-repeat="producto in $ctrl.productos">
+                        {{producto.nombre}}
+                    </div>
+                </div>
             </div>
 
             <div class="botonera">
